# telemetry-tui

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/comm/: mock.rs  mod.rs  serial.rs
src/tui/: config.rs  logs.rs  mod.rs  robot_state.rs  sensor_status.rs  ui.rs
