[package]
name = "telemetry-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-serial = "5.4.5"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"] }
